--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*=================================== 
+/*===================================
   Color Codes
   main color: #040466
 ======================================*/
@@ -12,17 +12,17 @@ body {
 /* body {
     font-size: .875rem;
   } */
-  
+
   /* .feather {
     width: 16px;
     height: 16px;
     vertical-align: text-bottom;
   } */
-  
+
   /*
    * Sidebar
    */
-  
+
   .sidebar {
     width: 100%;
     position: fixed;
@@ -38,7 +38,7 @@ body {
   #menu {
     background-color: #fff;
   }
-  
+
   .sidebar-sticky {
     position: relative;
     top: 0;
@@ -55,33 +55,33 @@ body {
     word-wrap: break-word;
     line-height: .5;
 }
-  
+
   @supports ((position: -webkit-sticky) or (position: sticky)) {
     .sidebar-sticky {
       position: -webkit-sticky;
       position: sticky;
     }
   }
-  
+
   .sidebar .nav-link {
     font-weight: 500;
     color: #fff;
   }
-  
+
   .sidebar .nav-link .feather {
     /* margin-right: 4px; */
     color: #999;
   }
-  
+
   .sidebar .nav-link.active {
     color: #007bff;
   }
-  
+
   .sidebar .nav-link:hover .feather,
   .sidebar .nav-link.active .feather {
     color: inherit;
   }
-  
+
   .sidebar-heading {
     font-size: .75rem;
     text-transform: uppercase;
@@ -93,25 +93,25 @@ body {
       margin: 0 auto;
       background-color: white;
   }
-  
+
   /*
    * Content
    */
-  
+
   [role="main"] {
     padding-top: 133px; /* Space for fixed navbar */
   }
-  
+
   @media (min-width: 768px) {
     [role="main"] {
       padding-top: 48px; /* Space for fixed navbar */
     }
   }
-  
+
   /*
    * Navbar
    */
-  
+
   .navbar-brand {
     padding-top: .75rem;
     padding-bottom: .75rem;
@@ -120,24 +120,24 @@ body {
     /* background-color: rgba(0, 0, 0, .25);
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25); */
   }
- 
+
   .navbar .form-control {
     padding: .75rem 1rem;
     border-width: 0;
     border-radius: 0;
   }
-  
+
   .form-control-dark {
     color: #fff;
     background-color: rgba(255, 255, 255, .1);
     border-color: rgba(255, 255, 255, .1);
   }
-  
+
   .form-control-dark:focus {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
   }
-  
+
 /* ===========================
    Card elements
 ==============================*/
@@ -206,11 +206,11 @@ body {
   #login-page{
     width: 100%;
     height: 100vh;
-    background-image: url("../img/loginbg.jpeg");
+    background-image: url("../img/logoTaxi.jpeg");
     background-position: center;
     background-size: cover;
     /* position: relative; */
-    
+
   }
   .form-parent{
     margin-top: 120px;
@@ -254,17 +254,51 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
-  
+
   /* ============================
       Gestion parent elements
   ===============================*/
   .table-parent-gp{
     border: 1px solid #9c9a9a9a;
     border-radius: 2px;
-    padding: 30px 10px;
-    margin-bottom: 20px;
+    padding: 30px 10px 0 10px;
+    /* margin-bottom: 20px; */
     box-shadow: 3px 3px 5px 7px #9c9a9a9a;
   }
+
+  /* =========================================
+                  Clients
+  ============================================ */
+  #clients{
+      background: #fff !important;
+      border: 2px solid #000;
+
+  }
+
+  /* #clients .horizontal-heading {
+      margin-bottom: 30px;
+  } */
+
+  #clients_list {
+      /* padding: 45px 0 0 0; */
+      background: #fff;
+      border: 2px solid #gray;
+  }
+
+  .client {
+      padding: 0;
+      /* max-width: 150px; */
+      max-height: 200px;
+      margin: 0 auto;
+      /* line-height: 100px; */
+      background: #fff;
+  }
+
+  .client img {
+      display: inline-block !important;
+      background: #fff;
+  }
+
 
 footer{
   position: relative;
