signup et reset password

--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,10 @@ body {
     border-top-right-radius: 0;
   }
 
+  #signuppop input{
+    border-radius: 20px;
+  }
+
   /* ============================
       Gestion parent elements
   ===============================*/
